--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-blinker==1.8.2
-click==8.1.7
-Flask==3.0.3
-gunicorn==23.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==3.0.2
-packaging==24.1
-Werkzeug==3.0.4
-selenium==4.25.0
-webdriver_manager==4.0.2
+Flask==2.0.1
+Werkzeug==2.0.3
+selenium==4.0.0
+gunicorn==20.0.4
+webdriver_manager==3.8.3
+pandas==1.3.3
+openpyxl==3.0.7
